# ayni

./: .ayni.toml  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.cli  LICENSE  Makefile  NOTICE  README.md  install.sh  package-lock.json  package.json  release-please-config.json
.cargo/: config.toml
.github/docker/: ayni-rust-ci.Dockerfile
.github/workflows/: ayni.yml  docs.yml  publish-ayni-rust-ci.yml  release.yml
adapters/common/: Cargo.toml
adapters/common/src/: catalog.rs  discovery.rs  exec.rs  failure.rs  lib.rs  paths.rs  reports.rs  xml.rs
adapters/go/: Cargo.toml
adapters/go/src/: adapter.rs  catalog.rs  discovery.rs  lib.rs
adapters/go/src/collectors/: complexity.rs  coverage.rs  deps.rs  mod.rs  mutation.rs  size.rs  test.rs  util.rs
adapters/kotlin/: Cargo.toml
adapters/kotlin/src/: adapter.rs  catalog.rs  discovery.rs  install.rs  lib.rs
adapters/kotlin/src/collectors/: complexity.rs  coverage.rs  deps.rs  mod.rs  mutation.rs  size.rs  test.rs  util.rs
adapters/node/: Cargo.toml
adapters/node/src/: adapter.rs  catalog.rs  discovery.rs  lib.rs
adapters/node/src/collectors/: complexity.rs  coverage.rs  deps.rs  mod.rs  mutation.rs  size.rs  test.rs  util.rs
adapters/python/: Cargo.toml
adapters/python/src/: adapter.rs  catalog.rs  discovery.rs  lib.rs
adapters/python/src/collectors/: complexity.rs  coverage.rs  deps.rs  mod.rs  mutation.rs  size.rs  test.rs  util.rs
adapters/rust/: Cargo.toml
adapters/rust/src/: adapter.rs  catalog.rs  discovery.rs  lib.rs
adapters/rust/src/collectors/: complexity.rs  coverage.rs  deps.rs  mod.rs  mutation.rs  size.rs  test.rs
adapters/rust/src/tools/: mod.rs  signals.rs
adapters/rust/src/tools/signals/: helpers.rs  tests.rs
cli/: Cargo.toml
cli/src/: agents.rs  delta.rs  discovery.rs  install.rs  main.rs  tests.rs
cli/src/ui/: fallback.rs  layout.rs  md_report.rs  mod.rs  progress_log.rs  report.rs  runner.rs
cli/templates/policy/: go.toml  kotlin.toml  node.toml  python.toml  rust.toml
cli/tests/: report_output_e2e.rs
core/: Cargo.toml
core/src/: adapter.rs  catalog.rs  language.rs  lib.rs  policy.rs  registry.rs  runtime.rs  signal.rs  size.rs
core/src/catalog/: python_resolution.rs
docs/: cli.md  index.md
docs/.vitepress/: config.ts
docs/adapters/: go.md  kotlin.md  node.md  python.md  rust.md  template.md
docs/contributing/: adapters.md
docs/product/: config.md  overview.md  runtime.md  signals.md
docs/product/signals/: v1.md  v2.md
docs/tasks/0001-usage-improvements/: audit.md  decisions.md
examples/: README.md  signal-scenarios.md
examples/go/: Dockerfile
examples/go/mono/: .ayni.toml  .gitignore  go.mod
examples/go/mono/libs/greeting/: greeting.go
examples/go/mono/libs/math/: math.go  math_test.go
examples/go/mono/services/greeting-service/: main.go
examples/go/single/: go.mod  main.go
examples/kotlin/: Dockerfile
examples/kotlin/mono/: .ayni.toml  .gitignore  build.gradle.kts  settings.gradle.kts
examples/kotlin/mono/libs/greeting/: build.gradle.kts
examples/kotlin/mono/libs/greeting/src/main/kotlin/ayni/greeting/: Greeting.kt
examples/kotlin/mono/libs/greeting/src/test/kotlin/ayni/greeting/: GreetingTest.kt
examples/kotlin/mono/libs/math/src/main/kotlin/ayni/math/: Math.kt
examples/kotlin/mono/libs/math/src/test/kotlin/ayni/math/: MathTest.kt
examples/kotlin/mono/services/greeting-service/: build.gradle.kts
examples/kotlin/mono/services/greeting-service/src/main/kotlin/ayni/service/: Service.kt
examples/kotlin/mono/services/greeting-service/src/test/kotlin/ayni/service/: ServiceTest.kt
examples/kotlin/single/: .gitignore  build.gradle.kts  settings.gradle.kts
examples/kotlin/single/src/main/kotlin/ayni/example/: Greeting.kt
examples/kotlin/single/src/test/kotlin/ayni/example/: GreetingTest.kt
examples/node/: Dockerfile
examples/node/mono/: .ayni.toml  package.json
examples/node/mono/libs/greeting/: package.json
examples/node/mono/libs/greeting/src/: index.ts
examples/node/mono/libs/math/: package.json
examples/node/mono/libs/math/src/: index.test.ts  index.ts
examples/node/mono/services/greeting-service/: package.json
examples/node/mono/services/greeting-service/src/: index.ts
examples/node/single/: .gitignore  package.json  tsconfig.json
examples/node/single/src/: index.ts
examples/python/: Dockerfile
examples/python/mono/: .ayni.toml
examples/python/mono/libs/greeting/: pyproject.toml
examples/python/mono/libs/greeting/greeting_lib/: __init__.py
examples/python/mono/libs/math/: pyproject.toml  test_math.py
examples/python/mono/libs/math/math_lib/: __init__.py
examples/python/mono/services/greeting_service/: main.py  pyproject.toml
examples/python/single/: .gitignore  main.py  pyproject.toml
examples/rust/: Dockerfile
examples/rust/mono/: .ayni.toml  .gitignore  Cargo.toml
examples/rust/mono/libs/greeting/: Cargo.toml
examples/rust/mono/libs/greeting/src/: lib.rs
examples/rust/mono/libs/math/src/: lib.rs
examples/rust/mono/libs/math/tests/: math_tests.rs
examples/rust/mono/services/greeting-service/: Cargo.toml
examples/rust/mono/services/greeting-service/src/: main.rs
examples/rust/single/: Cargo.toml
examples/rust/single/src/: main.rs
