[package]
name = "ayni-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml.workspace = true
walkdir = "2"

[dev-dependencies]
tempfile = "3"
