[package]
name = "ayni-adapters-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ayni-core = { path = "../../core" }
regex = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
