[package]
name = "ayni-adapters-kotlin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ayni-core = { path = "../../core" }
glob = "0.3"
regex = "1"
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
toml = "0.8"
