[package]
name = "ayni-adapters-kotlin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ayni-core = { path = "../../core" }
glob = "0.3"
regex = "1"
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
toml.workspace = true
